--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,9 +51,9 @@ jobs:
           file: ./docker/Dockerfile  
           push: true
           tags: |
-            ghcr.io/jasonyfy/go-proxy-bingai:${{ github.ref_name }}
-            ghcr.io/jasonyfy/go-proxy-bingai:latest
-            docker.io/jasonyfy/go-proxy-bingai:${{ github.ref_name }}
-            docker.io/jasonyfy/go-proxy-bingai:latest
-          cache-from: type=registry,ref=jasonyfy/go-proxy-bingai:cache
-          cache-to: type=registry,ref=jasonyfy/go-proxy-bingai:cache,mode=max   
+            ghcr.io/${{ github.repository_owner }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}:latest
+            docker.io/${{ github.repository_owner }}:${{ github.ref_name }}
+            docker.io/${{ github.repository_owner }}:latest
+          cache-from: type=registry,ref=${{ github.repository_owner }}:cache
+          cache-to: type=registry,ref=${{ github.repository_owner }}:cache,mode=max   
