--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,9 +51,9 @@ jobs:
           file: ./docker/Dockerfile  
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}:${{ github.ref_name }}
-            ghcr.io/${{ github.repository_owner }}:latest
-            docker.io/${{ github.repository_owner }}:${{ github.ref_name }}
-            docker.io/${{ github.repository_owner }}:latest
-          cache-from: type=registry,ref=${{ github.repository_owner }}:cache
-          cache-to: type=registry,ref=${{ github.repository_owner }}:cache,mode=max   
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository }}:latest
+            docker.io/${{ github.repository }}:${{ github.ref_name }}
+            docker.io/${{ github.repository }}:latest
+          cache-from: type=registry,ref=${{ github.repository }}:cache
+          cache-to: type=registry,ref=${{ github.repository }}:cache,mode=max   
