--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,5 +7,7 @@ FROM alpine
 WORKDIR /app
 COPY --from=builder /app/go-proxy-bingai .
 
+RUN apk add --no-cache tzdata
+ENV TZ=Asia/Shanghai
 EXPOSE 8080
 CMD ["/app/go-proxy-bingai"]
